<?xml version="1.0" encoding="utf-8"?>
<com.open.androidtvwidget.view.RelativeMainLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/charge_buy_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/charge_buy_type"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:textSize="@dimen/w_52" />


    <LinearLayout
        android:id="@+id/charge_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/charge_buy_type"
        android:layout_marginTop="@dimen/h_92"
        android:orientation="horizontal">

        <Button
            android:id="@+id/charge_one_tn"
            android:layout_width="@dimen/w_310"
            android:layout_height="@dimen/h_108"
            android:background="@drawable/charge_back_one"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/w_48" />

        <Button
            android:id="@+id/charge_all_tn"
            android:layout_width="@dimen/w_310"
            android:layout_height="@dimen/h_108"
            android:layout_marginLeft="@dimen/w_84"
            android:background="@drawable/charge_back_two"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/w_48" />

    </LinearLayout>


    <TextView
        android:id="@+id/mall_goods_pay_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/charge_ll"
        android:layout_marginTop="@dimen/h_96"
        android:alpha="0.5"
        android:gravity="center_horizontal"
        android:text="@string/charge_pay_one"
        android:textColor="#ffffff"
        android:textSize="@dimen/w_36" />


    <TextView
        android:id="@+id/mall_goods_pay_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mall_goods_pay_one"
        android:layout_marginTop="@dimen/h_36"
        android:alpha="0.5"
        android:gravity="center_horizontal"
        android:text="@string/charge_pay_all"
        android:textColor="#ffffff"
        android:textSize="@dimen/w_36" />


</com.open.androidtvwidget.view.RelativeMainLayout>